--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
 						<a href="/" class="profile_gavatar"><img class="circle" src="{{ site.gavatar }}"></a>
 					</div>
 					<div class="address">
-						<h5><span class="fa fa-map-marker"></span> Shenzhen Guangdong, China</h5>
+						<h5><span class="fa fa-map-marker"></span> Xingping Shaanxi China
+                        </h5>
 					</div>
 					<div class="center profile_desc">
 						{{ site.profile_desc }}
