--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,9 +34,9 @@
 				   <div class="collapse navbar-collapse" id="example-navbar-collapse">
 						<ul class="nav navbar-nav phone-nav center">
 							<li class="phoneselect"><a class="page-link pjaxlink" href="{{site.baseurl}}/"><i class="fa free-code-camp"></i>&nbsp;首页</a></li>
-							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/handbook.html"><i class="fa fa-book"></i>&nbsp;手册</a></li>
-							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/tags.html"><i class="fa fa-tags"></i>&nbsp;文章</a></li>
-							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/resume.html"><i class="fa fa-archive"></i>&nbsp;简历</a></li>
+							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/handbook.html"><i class="fa fa-book"></i>&nbsp;博文</a></li>
+							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/tags.html"><i class="fa fa-tags"></i>&nbsp;相册</a></li>
+							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/resume.html"><i class="fa fa-archive"></i>&nbsp;音乐</a></li>
 							<li class="phoneselect"><a class="page-link pjaxlink" href="/pages/about.html"><i class="fa fa-user"></i>&nbsp;关于</a></li>
 						</ul>
 				   </div>
