--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -966,13 +966,13 @@ background-color: rgba(253, 253, 255, 0.51);
   -webkit-border-radius: 7px 7px 0 0;
 }
 .tag-cloud .page-tag{
-  min-height: 12.5em;
-background-color: rgba(253, 253, 255, 0.51);
+  /*min-height: 12.5em;*/
+/*background-color: rgba(253, 253, 255, 0.51);*/
         /*background-image: linear-gradient(120deg, #155799, #159957) !important;*/
   padding: 0.5em;
   padding-left: 1.5em;
   padding-top: 1em;
-  float: left;
+  /*float: left;*/
   -moz-border-radius:0 0 7px 7px;
   -webkit-border-radius: 0 0 7px 7px;
 }
