--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -966,7 +966,7 @@ background-color: rgba(253, 253, 255, 0.51);
   -webkit-border-radius: 7px 7px 0 0;
 }
 .tag-cloud .page-tag{
-  /*min-height: 12.5em;*/
+  min-height: 12.5em;
 /*background-color: rgba(253, 253, 255, 0.51);*/
         /*background-image: linear-gradient(120deg, #155799, #159957) !important;*/
   padding: 0.5em;
