--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
 
     <div class="center sitedesc">
-    	 © 2017  |  Town on <a href="https://github.com/{{ site.author.github_username }}/{{ site.author.github_username }}.github.io"> Github</a>
+    	 © 2017  |  xzfg on <a href="https://github.com/{{ site.author.github_username }}/{{ site.author.github_username }}.github.io"> Github</a>
             网站运行：<span id="htmer_time" style="color: #33ccff;"></span>
     </div>
   </div>
